fix: replace Arrays.asList(array) with List.of(array) to silence varargs warnings
Java cannot distinguish between varargs and single-element calls when an array
is passed to Arrays.asList(), producing compiler warnings. List.of(T[]) is
unambiguous and idiomatic since Java 9.

Confidence: high
Scope-risk: narrow