@@ -48,7 +48,7 @@ public class Theme5ExportComponent extends GenericExportComponent {
 
     @Override
     protected List<Object> getSelectionItems() {
-        return Arrays.asList(InstrumentoObservacional.getInstance().getCriterios());
+        return List.of(InstrumentoObservacional.getInstance().getCriterios());
     }
 
     @Override
