@@ -10,7 +10,6 @@ import org.junit.jupiter.api.Test;
 
 import java.io.File;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -38,7 +37,7 @@ class GseqExporterTest {
         registro = Registro.cargarRegistro(linceRegister, exceptions);
 
         assertNotNull(registro, "Registro should be loaded successfully");
-        criterios = Arrays.asList(InstrumentoObservacional.getInstance().getCriterios());
+        criterios = List.of(InstrumentoObservacional.getInstance().getCriterios());
     }
 
     @Test
